# ImageProcessingLibrary

./: BrightnessAndContrast.cpp  BrightnessAndContrast.h  CMakeLists.txt  GammaCorrection.cpp  GammaCorrection.h  Image.cpp  Image.h  ImageConvolution.cpp  ImageConvolution.h  ImageProcessing.cpp  ImageProcessing.h  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  ShapeDrawing.cpp  ShapeDrawing.h  Size.cpp  Size.h  main.cpp
output/: output_barbara_annotated.pgm  output_barbara_bright.pgm  output_barbara_contrast.pgm  output_barbara_edges.pgm  output_barbara_roi.pgm  output_glassware_denoised.pgm
